--- a/_posts/1.lambda.md
+++ b/_posts/1.lambda.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "1、Lambda 表达式基础"
 date:   2014-12-30 09:00:13
-categories: java
+categories: Category 
 permalink: /archivers/java/lambda
 ---
 # 1.0 前言
