--- a/_posts/2016-06-02-java8.2.stream.md
+++ b/_posts/2016-06-02-java8.2.stream.md
@@ -170,14 +170,22 @@ IntStream is = IntStream.of(1, 2, 3 , 4, 5);
 System.out.println(is.reduce((a, b) -> a+b));  // 输出 OptionalInt[15]
 ```
 
-在这个操作里可以看到，reduce 方法有两个参数。其中第1个参数是上次操作返回的结果，第2个参数是 Stream 中下一个元素。如果是第一次执行，第1个参数是 Stream 中的第一个元素， 第2个参数是Stream  中的第2个元素。简单描述一下这个操作的执行过程，
-| 操作 | 结果 |
-| ---------- | --------- |
-| 首先流初始化后有5个元素  |   1， 2， 3， 4， 5 |
-| 第1次聚合 |  3，3， 4， 5 |
-| 第2次聚合 |  6， 4， 5 |
-| 第3次聚合 | 10， 5 |
-| 第4次聚合 | 15 |
+在这个操作里可以看到，reduce 方法有两个参数。其中第1个参数是上次操作返回的结果，第2个参数是 Stream 中下一个元素。如果是第一次执行，第1个参数是 Stream 中的第一个元素， 第2个参数是Stream  中的第2个元素。简单描述一下这个操作的执行过程
+<table>
+    <thead>
+        <tr>
+            <td>操作</td>
+            <td>结果</td>
+        </tr>
+    </thead>
+    <tbody>
+        <tr><td>首先流初始化后有5个元素</td><td>1， 2， 3， 4， 5</td></tr>
+        <tr><td>第1次聚合</td><td>3，3， 4， 5 </td></tr>
+        <tr><td>第2次聚合</td><td>6， 4， 5</td>></tr>
+        <tr><td>第3次聚合</td><td>10， 5</td>></tr>
+        <tr><td>第4次聚合</td><td>15</td>></tr>
+    </tbody>
+</table>
 
 reduce方法还有一个很常用的变种，接收两个参数： T reduce(T identity, BinaryOperator<T> accumulator)，相对上面已经介绍过方法的多了一个参数：它允许用户提供一个值，如果Stream为空，就直接返回该值。
 
@@ -193,7 +201,7 @@ System.out.println(is.reduce(5, (a, b) -> a+b));  // 输出 5
 ```java
 IntStream s = IntStream.of(1,2,3,4);
 System.out.println(s.sum());
-```
+``` 
 注：只有 IntStream、LongStream、DoubleStream 才有 sum 方法
 - count、max、min 
 
@@ -303,6 +311,7 @@ System.out.println(map);
 
 ## 2.4.6 Optional 类型
 在前文的介绍中，你应该看到了 Optional 这个东西，有很多终止操作的结果是Optional<T>。那么，Optional是什么？
+
 Optional 是一个容器，它可能包含也可能不包含一个值，用意是替代不安全的返回类型 NULL。比如，我们常见的一种代码，
 
 ```java
@@ -320,6 +329,7 @@ if(i != null) {
 }
 ```
 调用一个返回T类型的方法后，为了安全我们必须验证这个对象不是 NULL，造成代码的阅读星和维护性都比较差，但是如果没有这样做，就很可能出现 NullPointException。
+
 Optional 就是为了解决这个问题而设计的，它提供了一个接受 Consumer<? super T>类型参数的方法 *ifPresent*，只有当存在可用的元素时，才执行逻辑
 
 ```java
