--- a/_posts/2016-04-19-java8.md
+++ b/_posts/2016-04-19-java8.md
@@ -1,24 +1,23 @@
 ---
 layout: post
 title:  "Java 8 你需要掌握的新特性"
-date:   2016-06-21 +08:00
+date:   2016-06-21
 categories: java 
-permalink: /archivers/java/lambda
-tags: java, lambda
+tags: java java8
 ---
 
 Java 8 是一个大的变更版本，提供了很多优秀的新功能和更好的API。可是很多同学因为教材或是工作原因，对Java自身的学习和认知还停留在 Java 6 上。所以整理一下我认为我们应该掌握的 Java 8 新特性，大家共同学习。
 
-ps：这几篇博客内容实际上是我对《写给大忙人看的Java SE 8》一书的读书笔记，建议大家最好能看一下。
+ps：这几篇博客内容实际上是我对《写给大忙人看的Java SE 8》一书的读书笔记，建议大家最好能看一下原书。
 
 目录：
 
-[1、Lambda 表达式基础](https://miaoxinguo.github.io/archivers/java/lambda)
+[1、Lambda 表达式基础](https://miaoxinguo.github.io/java/2016/05/15/java8.1.lambda.html)
 
-[2、Stream API]()
+[2、Stream API](https://miaoxinguo.github.io/java/2016/06/02/java8.2.stream.html)
 
-[3、全新的日期时间 API]()
+[3、全新的日期时间 API](https://miaoxinguo.github.io/java/2016/04/19/java8.3.time.html)
 
-[4、并发增强]()
+[4、并发增强](https://miaoxinguo.github.io/java/2016/06/21/java8.4.concurrent.html)
 
-[5、杂项]()
+[5、杂项](https://miaoxinguo.github.io/java/2016/05/15/java8.5.other.html)
