--- a/_posts/2016-06-02-java8.2.stream.md
+++ b/_posts/2016-06-02-java8.2.stream.md
@@ -3,8 +3,7 @@ layout: 'post'
 title:  "2、Stream API"
 date:   2016-06-02 
 categories: java 
-permalink: /archivers/java/stream
-tags: java, stream
+tags: java java8 stream
 ---
 
 # 2.1 概述
