--- a/_posts/2016-06-21-java8.4.concurrent.md
+++ b/_posts/2016-06-21-java8.4.concurrent.md
@@ -3,8 +3,7 @@ layout: post
 title:  "4、并发增强"
 date:   2016-06-21
 categories: java 
-permalink: /archivers/java/concurrent
-tags: java, concurrent
+tags: java java8 concurrent
 ---
 
 # 4.1 概述
