--- a/_posts/2016-05-15-java8.5.other.md
+++ b/_posts/2016-05-15-java8.5.other.md
@@ -3,8 +3,7 @@ layout: post
 title:  "5、杂项"
 date:   2016-05-15
 categories: java 
-permalink: /archivers/java/other
-tags: java
+tags: java java8
 ---
 
 # 5.1 字符串
