--- a/_posts/2016-07-07-jekyll.rauge.stylehighlight.md
+++ b/_posts/2016-07-07-jekyll.rauge.stylehighlight.md
@@ -1,14 +1,14 @@
 ---
 layout: 'post'
-title: "Rouge 语法高亮"
+title: "更换 Jekyll 博客的语法高亮风格"
 date:  2016-07-07
 categories: jekyll 
-tags: [jekyll, 代码高亮, rouge]
+tags: [jekyll, 代码高亮]
 ---
 
 [Rouge](http://rouge.jneen.net/) 是 jekyll 3 默认的语法高亮插件。 
 
-Rouge 内置了几套样式，可以使用 ``rougify style monokai > syntax.css`` 命令生成你想要的文件。
+Rouge 内置了几套样式，可以使用 ``rougify style monokai > syntax.css`` 命令生成你想要的风格文件。
 
 查看可用的 theme
 
