--- a/_posts/2016-04-19-java8.md
+++ b/_posts/2016-04-19-java8.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Java 8 你需要掌握的新特性"
+title:  "Java 8 你需要掌握的新特性 目录"
 date:   2016-06-21
 categories: java 
 tags: java java8
