--- a/_posts/2016-05-10-java8.1.lambda.md
+++ b/_posts/2016-05-10-java8.1.lambda.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "1、Lambda 表达式基础"
+title:  "Java 8 你需要掌握的新特性 1、Lambda 表达式基础"
 date:   2016-05-10
 categories: java 
 tags: java java8 lambda
