--- a/_posts/2016-06-02-java8.2.stream.md
+++ b/_posts/2016-06-02-java8.2.stream.md
@@ -1,6 +1,6 @@
 ---
 layout: 'post'
-title:  "2、Stream API"
+title:  "Java 8 你需要掌握的新特性 2、Stream API"
 date:   2016-06-02 
 categories: java 
 tags: java java8 stream
