--- a/_posts/2016-06-21-java8.4.concurrent.md
+++ b/_posts/2016-06-21-java8.4.concurrent.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "4、并发增强"
+title:  "Java 8 你需要掌握的新特性 4、并发增强"
 date:   2016-06-21
 categories: java 
 tags: java java8 concurrent
