--- a/_posts/2016-04-04-fix.compare.md
+++ b/_posts/2016-04-04-fix.compare.md
@@ -3,7 +3,7 @@ layout: 'post'
 title: "记一次bug fix：Comparison method violates its general contract!"
 date:  2016-04-04
 categories: java 
-tags: [java, Comparison method violates its general contract]
+tags: [java, compare]
 ---
 
 # 起
