--- a/_posts/2016-06-02-java8.2.stream.md
+++ b/_posts/2016-06-02-java8.2.stream.md
@@ -171,21 +171,13 @@ System.out.println(is.reduce((a, b) -> a+b));  // 输出 OptionalInt[15]
 
 在这个操作里可以看到，reduce 方法有两个参数。其中第1个参数是上次操作返回的结果，第2个参数是 Stream 中下一个元素。如果是第一次执行，第1个参数是 Stream 中的第一个元素， 第2个参数是Stream  中的第2个元素。简单描述一下这个操作的执行过程
 
-<table>
-    <thead>
-        <tr>
-            <td>操作</td>
-            <td>结果</td>
-        </tr>
-    </thead>
-    <tbody>
-        <tr><td>首先流初始化后有5个元素</td><td>1， 2， 3， 4， 5</td></tr>
-        <tr><td>第1次聚合</td><td>3，3， 4， 5 </td></tr>
-        <tr><td>第2次聚合</td><td>6， 4， 5</td>></tr>
-        <tr><td>第3次聚合</td><td>10， 5</td>></tr>
-        <tr><td>第4次聚合</td><td>15</td>></tr>
-    </tbody>
-</table>
+| 操作 | 结果 |
+| :---- | :----- |
+| 首先流初始化后有5个元素 | 1， 2， 3， 4， 5 |
+| 第1次聚合 | 3，3， 4， 5  |
+| 第2次聚合 | 6， 4， 5 |
+| 第3次聚合 | 10， 5 |
+| 第4次聚合 | 15 |
 
 reduce方法还有一个很常用的变种，接收两个参数： T reduce(T identity, BinaryOperator<T> accumulator)，相对上面已经介绍过方法的多了一个参数：它允许用户提供一个值，如果Stream为空，就直接返回该值。
 
