--- a/_posts/2016-12-05-黑客与画家.md
+++ b/_posts/2016-12-05-黑客与画家.md
@@ -1,3 +1,11 @@
+---
+layout: 'post'
+title: "黑客与画家"
+date:  2016-12-05
+categories: 读后笔记 
+tags: [黑客与画家]
+---
+
 本书是作者的文集，虽然被誉为创业者必读，但是也有很多和创业没有直接关系的章节，同样适合计算机行业从业者和爱好者阅读。在阅读本书的过程中，几乎不会意识到这是10几年前写下文章，很是钦佩作者对行业的观察之深和对未来的预判之准。感慨之余记录和发散几个比较认同的观点，以便回顾。
 
 ## 什么是黑客？
