增加idea设置不下载源码和文档

--- a/_posts/2015-02-05-gradle.setting.md
+++ b/_posts/2015-02-05-gradle.setting.md
@@ -2,18 +2,28 @@
 layout: 'post'
 title: "Gradle 配置"
 date:  2015-02-05
-categories: gradle 
+categories: gradle
 tags: [build.gradle, gradle配置]
 ---
 
 - 设置是否下载源码和文档
-
+eclipse
 ```groovy
 eclipse.classpath {
     // settings for downloading sources and Javadoc:
     downloadSources = true
     downloadJavadoc = false
 }
+```
+
+idea
+```groovy
+idea {
+        module {
+            downloadJavadoc = false
+            downloadSources = false
+        }
+    }
 ```
 
 - 设置src/main/webapp为eclipse的资源包
