Revert "Update 2016-12-05-黑客与画家.md"
This reverts commit d07a4c503ccef2f6715099454f6ac60516ddd9b6.

--- a/_posts/2016-12-05-黑客与画家.md
+++ b/_posts/2016-12-05-黑客与画家.md
@@ -57,7 +57,7 @@ tags: [黑客与画家]
 > 大公司会使得每个员工的贡献平均化，这是一个问题。我觉得，大公司最大的困扰就是无法准确测量每个员工的贡献
 > 要致富，你需要两样东西：可测量性和可放大性。你的职位产生的业绩，应该是可测量的，否则你做得再多，也不会得到更多的报酬。此外，你还必须有可放大性，也就是说你做出的决定能够产生巨大的效应
 
-程序员很难被测量，而且大公司有严格的流程和做事方式，每个人的工作都局限在整体的一个小部分里，所以除非自己折腾出显著的成果，达到从0到1的效果，否则你的所有努力都会被平均到团队的贡献里。所以，团队人越少，你对平均贡献的影响力越大，也就是说越小的团队可测良性越大。
+程序员很难被测量，而且大公司有严格的流程和做事方式，每个人的工作都局限在整体的一个小部分里，所以除非自己折腾出显著的成果，达到从0到1的效果，否则你的所有努力都会呗平均到团队的贡献里。所以，团队人越少，你对平均贡献的影响力越大，也就是说越小的团队可测良性越大。
 对于可放大性，我的理解类似长尾理论，即获取更多的财富不需要增加明显额外的付出。
 
 ## 技术壁垒
